[gd_scene load_steps=12 format=4 uid="uid://gi3wxwtpygrq"]

[ext_resource type="Script" path="res://Rooms/RoomScript/Room8.gd" id="1_r1kpx"]
[ext_resource type="Texture2D" uid="uid://c2dvhcw4hsca4" path="res://Art/32x32 tileset/32x32 first tileset.png" id="2_ew8jx"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0hp7d"]
texture = ExtResource("2_ew8jx")
texture_region_size = Vector2i(32, 32)
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0
24:0/0 = 0
25:0/0 = 0
26:0/0 = 0
27:0/0 = 0
28:0/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
24:1/0 = 0
25:1/0 = 0
26:1/0 = 0
27:1/0 = 0
28:1/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
25:2/0 = 0
26:2/0 = 0
27:2/0 = 0
28:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
23:3/0 = 0
24:3/0 = 0
25:3/0 = 0
26:3/0 = 0
27:3/0 = 0
28:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
24:4/0 = 0
25:4/0 = 0
26:4/0 = 0
27:4/0 = 0
28:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
25:5/0 = 0
26:5/0 = 0
27:5/0 = 0
28:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
23:6/0 = 0
24:6/0 = 0
25:6/0 = 0
26:6/0 = 0
27:6/0 = 0
28:6/0 = 0
29:6/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
15:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
23:7/0 = 0
24:7/0 = 0
25:7/0 = 0
26:7/0 = 0
27:7/0 = 0
28:7/0 = 0
29:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
23:8/0 = 0
24:8/0 = 0
26:8/0 = 0
27:8/0 = 0
28:8/0 = 0
29:8/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
26:9/0 = 0
27:9/0 = 0
28:9/0 = 0
29:9/0 = 0

[sub_resource type="TileSet" id="TileSet_aid84"]
tile_size = Vector2i(32, 32)
sources/1 = SubResource("TileSetAtlasSource_0hp7d")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_r5fy4"]
texture = ExtResource("2_ew8jx")
texture_region_size = Vector2i(32, 32)
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0
24:0/0 = 0
25:0/0 = 0
26:0/0 = 0
27:0/0 = 0
28:0/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
24:1/0 = 0
25:1/0 = 0
26:1/0 = 0
27:1/0 = 0
28:1/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
25:2/0 = 0
26:2/0 = 0
27:2/0 = 0
28:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
23:3/0 = 0
24:3/0 = 0
25:3/0 = 0
26:3/0 = 0
27:3/0 = 0
28:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
24:4/0 = 0
25:4/0 = 0
26:4/0 = 0
27:4/0 = 0
28:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
25:5/0 = 0
26:5/0 = 0
27:5/0 = 0
28:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
23:6/0 = 0
24:6/0 = 0
25:6/0 = 0
26:6/0 = 0
27:6/0 = 0
28:6/0 = 0
29:6/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
15:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
23:7/0 = 0
24:7/0 = 0
25:7/0 = 0
26:7/0 = 0
27:7/0 = 0
28:7/0 = 0
29:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
23:8/0 = 0
24:8/0 = 0
26:8/0 = 0
27:8/0 = 0
28:8/0 = 0
29:8/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
26:9/0 = 0
27:9/0 = 0
28:9/0 = 0
29:9/0 = 0
29:0/0 = 0

[sub_resource type="TileSet" id="TileSet_obd1h"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_r5fy4")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_k53b3"]
texture = ExtResource("2_ew8jx")
texture_region_size = Vector2i(32, 32)
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0
24:0/0 = 0
25:0/0 = 0
26:0/0 = 0
27:0/0 = 0
28:0/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
24:1/0 = 0
25:1/0 = 0
26:1/0 = 0
27:1/0 = 0
28:1/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
25:2/0 = 0
26:2/0 = 0
27:2/0 = 0
28:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
23:3/0 = 0
24:3/0 = 0
25:3/0 = 0
26:3/0 = 0
27:3/0 = 0
28:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
24:4/0 = 0
25:4/0 = 0
26:4/0 = 0
27:4/0 = 0
28:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
25:5/0 = 0
26:5/0 = 0
27:5/0 = 0
28:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
23:6/0 = 0
24:6/0 = 0
25:6/0 = 0
26:6/0 = 0
27:6/0 = 0
28:6/0 = 0
29:6/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
15:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
23:7/0 = 0
24:7/0 = 0
25:7/0 = 0
26:7/0 = 0
27:7/0 = 0
28:7/0 = 0
29:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
23:8/0 = 0
24:8/0 = 0
26:8/0 = 0
27:8/0 = 0
28:8/0 = 0
29:8/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
26:9/0 = 0
27:9/0 = 0
28:9/0 = 0
29:9/0 = 0

[sub_resource type="TileSet" id="TileSet_uully"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_k53b3")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d6dk7"]
size = Vector2(19.5, 160)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p6rjs"]
size = Vector2(160, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2o70h"]
size = Vector2(20, 155)

[node name="Room8" type="Node2D"]
script = ExtResource("1_r1kpx")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_aid84")
format = 2

[node name="Pathway" type="TileMapLayer" parent="TileMap"]
use_parent_material = true
tile_map_data = PackedByteArray("AAAAAAAAAAADAAIAAAAAAAEAAAADAAIAAAAAAAIAAAADAAIAAAAAAAMAAAADAAIAAAAAAAQAAAADAAIAAAAAAAUAAAAIAAIAAAAAAAYAAAAIAAIAAAAAAAcAAAAIAAMAAAAAAAgAAAALAAUAAAAAAAkAAAAIAAUAAAAAAAoAAAAIAAUAAAAAAAsAAAAIAAUAAAAAAAwAAAAIAAEAAAAAAA4AAAADAAIAAAAAAA8AAAADAAIAAAABABAAAAAIAAIAAAABABEAAAAIAAIAAAABABIAAAADAAIAAAABABMAAAADAAIAAAAAABMAAAADAAIAAAAAABIAAAADAAIAAAAAABEAAAADAAIAAAAAABAAAAADAAIAAAAAABQAAAADAAIAAAABABQAAAADAAIAAAACABQAAAADAAIAAAADABQAAAADAAIAAAAEABQAAAADAAIAAAAFABQAAAADAAIAAAAGABQAAAADAAIAAAAHABQAAAADAAIAAAAIABQAAAADAAIAAAAJABQAAAADAAIAAAAKABQAAAADAAIAAAALABQAAAADAAIAAAAMABQAAAADAAIAAAANABQAAAADAAIAAAAOABQAAAADAAIAAAAPABQAAAADAAIAAAAQABQAAAADAAIAAAARABQAAAADAAIAAAASABQAAAADAAIAAAATABQAAAADAAIAAAAUABQAAAADAAIAAAAVABQAAAADAAIAAAAWABQAAAADAAIAAAAXABQAAAADAAIAAAAYABQAAAADAAIAAAAZABQAAAADAAIAAAAaABQAAAADAAIAAAAbABQAAAADAAIAAAAcABQAAAADAAIAAAAdABQAAAADAAIAAAAeABQAAAADAAIAAAAfABQAAAADAAIAAAAgABQAAAADAAIAAAAhABQAAAADAAIAAAAiABQAAAADAAIAAAAjABQAAAADAAIAAAAjABMAAAADAAIAAAAjABIAAAADAAIAAAAjABEAAAADAAIAAAAjABAAAAADAAIAAAAjAA8AAAADAAIAAAAiAA8AAAADAAIAAAAiAA4AAAADAAIAAAAiAA0AAAADAAIAAAAiAAwAAAADAAIAAAAjAAwAAAADAAIAAAAjAAsAAAADAAIAAAAjAA0AAAADAAIAAAAjAA4AAAADAAIAAAAjAAoAAAADAAIAAAAjAAkAAAADAAIAAAAjAAgAAAADAAIAAAAjAAYAAAADAAIAAAAjAAUAAAADAAIAAAAjAAQAAAADAAIAAAAjAAMAAAADAAIAAAAjAAIAAAADAAIAAAAjAAEAAAADAAIAAAAjAAAAAAADAAIAAAAiAAAAAAADAAIAAAAhAAAAAAADAAIAAAAgAAAAAAADAAIAAAAfAAAAAAADAAIAAAAeAAAAAAADAAIAAAAdAAAAAAADAAIAAAAcAAAAAAADAAIAAAAbAAAAAAADAAIAAAAaAAAAAAADAAIAAAAZAAAAAAADAAIAAAAYAAAAAAADAAIAAAAXAAAAAAAHAAIAAAAWAAAAAAAIAAUAAAAVAAAAAAAIAAUAAAAUAAAAAAAIAAUAAAATAAAAAAAIAAUAAAASAAAAAAAJAAIAAAARAAAAAAALAAIAAAAQAAAAAAADAAIAAAAPAAAAAAADAAIAAAAOAAAAAAADAAIAAAANAAAAAAADAAIAAAAMAAAAAAADAAIAAAALAAAAAAADAAIAAAAKAAAAAAADAAIAAAAJAAAAAAADAAIAAAAIAAAAAAADAAIAAAAHAAAAAAADAAIAAAAGAAAAAAADAAIAAAAFAAAAAAADAAIAAAAEAAAAAAADAAIAAAADAAAAAAADAAIAAAACAAAAAAADAAIAAAABAAAAAAADAAIAAAAIAAwAAAAIAAUAAAAIAAsAAAAIAAUAAAAIAAoAAAAIAAUAAAAIAAkAAAAIAAUAAAAIAAgAAAAIAAUAAAAIAAcAAAAIAAMAAAAIAAYAAAADAAIAAAAIAAUAAAADAAIAAAAIAAQAAAAIAAIAAAAIAAMAAAAIAAIAAAAIAAIAAAAIAAIAAAAIAAEAAAADAAIAAAAHAAEAAAADAAIAAAAGAAEAAAADAAIAAAAFAAEAAAADAAIAAAAEAAEAAAADAAIAAAADAAEAAAADAAIAAAACAAEAAAADAAIAAAABAAEAAAADAAIAAAABAAIAAAADAAIAAAABAAMAAAADAAIAAAABAAQAAAADAAIAAAABAAUAAAAIAAIAAAABAAYAAAAIAAIAAAABAAcAAAAIAAMAAAABAAgAAAAIAAUAAAABAAkAAAAIAAUAAAABAAoAAAAIAAUAAAABAAsAAAALAAUAAAABAAwAAAAIAAEAAAABAA0AAAADAAIAAAABAA4AAAADAAIAAAABAA8AAAADAAIAAAACAA8AAAAIAAIAAAACAA4AAAAIAAIAAAACAA0AAAADAAIAAAACAAwAAAAIAAEAAAACAAsAAAAIAAUAAAACAAoAAAAIAAUAAAACAAkAAAAIAAUAAAACAAgAAAAIAAUAAAACAAcAAAAIAAMAAAACAAYAAAAIAAIAAAACAAUAAAAIAAIAAAACAAQAAAADAAIAAAACAAMAAAADAAIAAAACAAIAAAADAAIAAAADAAIAAAADAAIAAAADAAMAAAADAAIAAAADAAQAAAADAAIAAAADAAUAAAAIAAIAAAADAAYAAAAIAAIAAAADAAcAAAAIAAMAAAADAAgAAAAIAAUAAAADAAkAAAALAAUAAAADAAoAAAAIAAUAAAADAAsAAAAIAAUAAAADAAwAAAAIAAEAAAADAA0AAAADAAIAAAADAA4AAAAIAAIAAAADAA8AAAADAAIAAAADABAAAAADAAIAAAACABAAAAAIAAIAAAACABEAAAADAAIAAAACABIAAAADAAIAAAACABMAAAADAAIAAAADABMAAAADAAIAAAADABIAAAADAAIAAAADABEAAAADAAIAAAAEABEAAAADAAIAAAAEABAAAAADAAIAAAAEAA8AAAADAAIAAAAEAA4AAAAIAAIAAAAEAA0AAAADAAIAAAAEAAwAAAAIAAEAAAAEAAsAAAAIAAUAAAAEAAoAAAAIAAUAAAAEAAkAAAAIAAUAAAAEAAgAAAAIAAUAAAAEAAcAAAAIAAMAAAAEAAYAAAADAAIAAAAEAAUAAAAIAAIAAAAEAAQAAAAIAAIAAAAEAAMAAAADAAIAAAAEAAIAAAADAAIAAAAFAAIAAAADAAIAAAAFAAMAAAADAAIAAAAFAAQAAAAIAAIAAAAFAAUAAAAIAAIAAAAFAAYAAAADAAIAAAAFAAcAAAAIAAMAAAAFAAgAAAAIAAUAAAAFAAkAAAAIAAUAAAAFAAoAAAAIAAUAAAAFAAsAAAAIAAUAAAAFAAwAAAAIAAEAAAAFAA0AAAADAAIAAAAFAA4AAAAIAAIAAAAFAA8AAAADAAIAAAAFABAAAAADAAIAAAAFABEAAAADAAIAAAAFABIAAAADAAIAAAAEABIAAAADAAIAAAAEABMAAAADAAIAAAAFABMAAAADAAIAAAAGABMAAAADAAIAAAAGABIAAAADAAIAAAAGABEAAAADAAIAAAAGABAAAAADAAIAAAAGAA8AAAADAAIAAAAGAA4AAAADAAIAAAAGAA0AAAADAAIAAAAGAAwAAAAIAAEAAAAGAAsAAAAIAAUAAAAGAAoAAAALAAUAAAAGAAkAAAAIAAUAAAAGAAgAAAAIAAUAAAAGAAcAAAAIAAMAAAAGAAYAAAADAAIAAAAGAAUAAAADAAIAAAAGAAQAAAAIAAIAAAAGAAMAAAAIAAIAAAAGAAIAAAADAAIAAAAHAAIAAAAIAAIAAAAHAAMAAAAIAAIAAAAHAAQAAAADAAIAAAAHAAUAAAADAAIAAAAHAAYAAAADAAIAAAAHAAcAAAAIAAMAAAAHAAgAAAAIAAUAAAAHAAkAAAAIAAUAAAAHAAoAAAAIAAUAAAAHAAsAAAAIAAUAAAAHAAwAAAAJAAEAAAAHAA0AAAAJAAIAAAAHAA4AAAAJAAIAAAAHAA8AAAAJAAIAAAAHABAAAAAJAAIAAAAHABEAAAAJAAIAAAAHABIAAAAJAAIAAAAHABMAAAAKAAYAAAAIABMAAAAIAAEAAAAIABIAAAAIAAUAAAAIABEAAAAIAAUAAAAIABAAAAAIAAUAAAAIAA8AAAAIAAUAAAAIAA4AAAAIAAUAAAAIAA0AAAAIAAUAAAAJAA0AAAAIAAUAAAAJAAwAAAAIAAUAAAAJAAsAAAAIAAUAAAAJAAoAAAAIAAUAAAAJAAkAAAAIAAUAAAAJAAgAAAAIAAUAAAAJAAcAAAAIAAMAAAAJAAYAAAADAAIAAAAJAAUAAAADAAIAAAAJAAQAAAAIAAIAAAAJAAMAAAADAAIAAAAJAAIAAAAIAAIAAAAJAAEAAAADAAIAAAAKAAEAAAADAAIAAAAKAAIAAAAIAAIAAAAKAAMAAAADAAIAAAAKAAQAAAAIAAIAAAAKAAUAAAADAAIAAAAKAAYAAAADAAIAAAAKAAcAAAAIAAMAAAAKAAgAAAAIAAUAAAAKAAkAAAAIAAUAAAAKAAoAAAAIAAUAAAAKAAsAAAAIAAUAAAAKAAwAAAAIAAUAAAAKAA0AAAAIAAUAAAAKAA4AAAAIAAUAAAAJAA4AAAAIAAUAAAAJAA8AAAAIAAUAAAAJABAAAAAIAAUAAAAJABEAAAAIAAUAAAAJABIAAAAIAAUAAAAJABMAAAAIAAEAAAAKABMAAAAIAAEAAAAKABIAAAAIAAUAAAAKABEAAAAIAAUAAAAKABAAAAAIAAUAAAAKAA8AAAAIAAUAAAALAA8AAAAIAAUAAAALAA4AAAAIAAUAAAALAA0AAAAIAAUAAAALAAwAAAAIAAUAAAALAAsAAAAIAAUAAAALAAoAAAAIAAUAAAALAAkAAAAIAAUAAAALAAgAAAAIAAUAAAALAAcAAAAIAAMAAAALAAYAAAADAAIAAAALAAUAAAADAAIAAAALAAQAAAAIAAIAAAALAAMAAAADAAIAAAALAAIAAAAIAAIAAAALAAEAAAADAAIAAAAMAAEAAAAIAAIAAAAMAAIAAAAIAAIAAAAMAAMAAAADAAIAAAAMAAQAAAAIAAIAAAAMAAUAAAADAAIAAAAMAAYAAAADAAIAAAAMAAcAAAAMAAQAAAAMAAgAAAAHAAIAAAAMAAkAAAAHAAIAAAAMAAoAAAAHAAIAAAAMAAsAAAAHAAIAAAAMAAwAAAAHAAIAAAAMAA0AAAAHAAIAAAAMAA4AAAAHAAMAAAAMAA8AAAAIAAUAAAAMABAAAAAIAAUAAAALABAAAAAIAAUAAAALABEAAAAIAAUAAAALABIAAAAIAAUAAAALABMAAAAIAAEAAAAMABMAAAAIAAEAAAAMABIAAAAIAAUAAAAMABEAAAAIAAUAAAANABEAAAAIAAUAAAANABAAAAAIAAUAAAANAA8AAAAIAAUAAAANAA4AAAAIAAMAAAANAA0AAAADAAIAAAANAAwAAAADAAIAAAANAAsAAAADAAIAAAANAAoAAAADAAIAAAANAAkAAAADAAIAAAANAAgAAAADAAIAAAANAAcAAAADAAIAAAANAAYAAAADAAIAAAANAAUAAAADAAIAAAANAAQAAAAIAAIAAAANAAMAAAADAAIAAAANAAIAAAADAAIAAAANAAEAAAAIAAIAAAAOAAEAAAAIAAIAAAAOAAIAAAADAAIAAAAOAAMAAAADAAIAAAAOAAQAAAAIAAIAAAAOAAUAAAADAAIAAAAOAAYAAAADAAIAAAAOAAcAAAADAAIAAAAOAAgAAAADAAIAAAAOAAkAAAADAAIAAAAOAAoAAAADAAIAAAAOAAsAAAADAAIAAAAOAAwAAAADAAIAAAAOAA0AAAADAAIAAAAOAA4AAAAIAAMAAAAOAA8AAAAIAAUAAAAOABAAAAAIAAUAAAAOABEAAAAIAAUAAAAOABIAAAAIAAUAAAANABIAAAAIAAUAAAANABMAAAAIAAEAAAAOABMAAAAIAAEAAAAPABMAAAAIAAEAAAAPABIAAAAIAAUAAAAPABEAAAAIAAUAAAAPABAAAAAIAAUAAAAPAA8AAAAIAAUAAAAPAA4AAAAIAAMAAAAPAA0AAAADAAIAAAAPAAwAAAADAAIAAAAPAAsAAAADAAIAAAAPAAoAAAAIAAIAAAAPAAkAAAAIAAIAAAAPAAgAAAAIAAIAAAAPAAcAAAAIAAIAAAAPAAYAAAAIAAIAAAAPAAUAAAAIAAIAAAAPAAQAAAAIAAIAAAAPAAMAAAADAAIAAAAPAAIAAAADAAIAAAAPAAEAAAAIAAIAAAAQAAEAAAADAAIAAAAQAAIAAAADAAIAAAAQAAMAAAADAAIAAAAQAAQAAAADAAIAAAAQAAUAAAADAAIAAAAQAAYAAAADAAIAAAAQAAcAAAADAAIAAAAQAAgAAAADAAIAAAAQAAkAAAAIAAIAAAAQAAoAAAAIAAIAAAAQAAsAAAADAAIAAAAQAAwAAAADAAIAAAAQAA0AAAADAAIAAAAQAA4AAAAIAAMAAAAQAA8AAAAIAAUAAAAQABAAAAAIAAUAAAAQABEAAAAIAAUAAAAQABIAAAAIAAUAAAAQABMAAAAIAAEAAAARABMAAAAIAAEAAAARABIAAAAIAAUAAAARABEAAAAIAAUAAAARABAAAAAIAAUAAAARAA8AAAAIAAUAAAARAA4AAAAIAAMAAAARAA0AAAADAAIAAAARAAwAAAADAAIAAAARAAsAAAADAAIAAAARAAoAAAADAAIAAAARAAkAAAADAAIAAAARAAgAAAADAAIAAAARAAcAAAADAAIAAAARAAYAAAADAAIAAAARAAUAAAADAAIAAAARAAQAAAADAAIAAAARAAMAAAADAAIAAAARAAIAAAADAAIAAAARAAEAAAADAAIAAAASAAEAAAAJAAIAAAASAAIAAAAJAAIAAAASAAMAAAAJAAIAAAASAAQAAAAJAAIAAAASAAUAAAAJAAIAAAASAAYAAAAJAAIAAAASAAcAAAAJAAIAAAASAAgAAAAJAAIAAAASAAkAAAAJAAIAAAASAAoAAAAJAAIAAAASAAsAAAAJAAIAAAASAAwAAAAJAAIAAAASAA0AAAAJAAIAAAASAA4AAAAJAAMAAAASAA8AAAAIAAUAAAASABAAAAAIAAUAAAASABEAAAAIAAUAAAASABIAAAAIAAUAAAASABMAAAAIAAEAAAATABMAAAAIAAEAAAATABIAAAAIAAUAAAATABEAAAAIAAUAAAATABAAAAAIAAUAAAATAA8AAAAIAAUAAAATAA4AAAAIAAUAAAATAA0AAAAIAAUAAAATAAwAAAAIAAUAAAATAAsAAAAIAAUAAAATAAoAAAAIAAUAAAATAAkAAAAIAAUAAAATAAgAAAAIAAUAAAATAAcAAAAIAAUAAAATAAYAAAAIAAUAAAATAAUAAAAIAAUAAAATAAQAAAAIAAUAAAATAAMAAAAIAAUAAAATAAIAAAAIAAUAAAATAAEAAAAIAAUAAAAUAAEAAAAIAAUAAAAUAAIAAAAIAAUAAAAUAAMAAAAIAAUAAAAUAAQAAAAIAAUAAAAUAAUAAAAIAAUAAAAUAAYAAAAIAAUAAAAUAAcAAAAIAAUAAAAUAAgAAAAIAAUAAAAUAAkAAAAIAAUAAAAUAAoAAAAIAAUAAAAUAAsAAAAIAAUAAAAUAAwAAAAIAAUAAAAUAA0AAAAIAAUAAAAUAA4AAAAIAAUAAAAUAA8AAAAIAAUAAAAUABAAAAAIAAUAAAAUABEAAAAIAAUAAAAUABIAAAAIAAUAAAAUABMAAAAIAAEAAAAVABMAAAAIAAEAAAAVABIAAAAIAAUAAAAVABEAAAAIAAUAAAAVABAAAAAIAAUAAAAVAA8AAAAIAAUAAAAVAA4AAAAIAAUAAAAVAA0AAAAIAAUAAAAVAAwAAAAIAAUAAAAVAAsAAAAIAAUAAAAVAAoAAAAIAAUAAAAVAAkAAAAIAAUAAAAVAAgAAAAIAAUAAAAVAAcAAAAIAAUAAAAVAAYAAAAIAAUAAAAVAAUAAAAIAAUAAAAVAAQAAAAIAAUAAAAVAAMAAAAIAAUAAAAVAAIAAAAIAAUAAAAVAAEAAAAIAAUAAAAWAAEAAAAIAAUAAAAWAAIAAAAIAAUAAAAWAAMAAAAIAAUAAAAWAAQAAAAIAAUAAAAWAAUAAAAIAAUAAAAWAAYAAAAIAAUAAAAWAAcAAAAIAAUAAAAWAAgAAAAIAAUAAAAWAAkAAAAIAAUAAAAWAAoAAAAIAAUAAAAWAAsAAAAIAAUAAAAWAAwAAAAIAAUAAAAWAA0AAAAIAAUAAAAWAA4AAAAIAAUAAAAWAA8AAAAIAAUAAAAWABAAAAAIAAUAAAAWABEAAAAIAAUAAAAWABIAAAAIAAUAAAAWABMAAAAIAAEAAAAXABMAAAAMAAYAAAAXABIAAAAHAAIAAAAXABEAAAAHAAIAAAAXABAAAAAHAAIAAAAXAA8AAAAHAAIAAAAXAA4AAAAHAAIAAAAXAA0AAAAHAAIAAAAXAAwAAAAHAAIAAAAXAAsAAAAHAAIAAAAXAAYAAAAHAAIAAAAXAAUAAAAHAAIAAAAXAAQAAAAHAAIAAAAXAAMAAAAHAAIAAAAXAAIAAAAHAAIAAAAXAAEAAAAHAAIAAAAYAAEAAAADAAIAAAAYAAIAAAADAAIAAAAYAAMAAAADAAIAAAAYAAQAAAADAAIAAAAYAAUAAAADAAIAAAAYAAYAAAAIAAIAAAAYAAcAAAAIAAIAAAAYAAgAAAAIAAIAAAAYAAkAAAADAAIAAAAYAAoAAAADAAIAAAAYAAsAAAADAAIAAAAYAAwAAAADAAIAAAAYAA0AAAADAAIAAAAYAA4AAAADAAIAAAAYAA8AAAADAAIAAAAYABAAAAADAAIAAAAYABEAAAADAAIAAAAYABIAAAADAAIAAAAYABMAAAADAAIAAAAZABMAAAADAAIAAAAZABIAAAADAAIAAAAZABEAAAAIAAIAAAAZABAAAAAIAAIAAAAZAA8AAAAIAAIAAAAZAA4AAAAIAAIAAAAZAA0AAAADAAIAAAAZAAwAAAADAAIAAAAZAAsAAAADAAIAAAAZAAoAAAADAAIAAAAZAAkAAAAIAAIAAAAZAAgAAAADAAIAAAAZAAcAAAADAAIAAAAZAAYAAAADAAIAAAAZAAUAAAAIAAIAAAAZAAQAAAAIAAIAAAAZAAMAAAAIAAIAAAAZAAIAAAADAAIAAAAZAAEAAAADAAIAAAAaAAEAAAADAAIAAAAaAAIAAAADAAIAAAAaAAMAAAAIAAIAAAAaAAQAAAAIAAIAAAAaAAUAAAAIAAIAAAAaAAYAAAAIAAIAAAAaAAcAAAAIAAIAAAAaAAgAAAADAAIAAAAaAAkAAAADAAIAAAAaAAoAAAADAAIAAAAaAAsAAAADAAIAAAAaAAwAAAADAAIAAAAaAA0AAAADAAIAAAAaAA4AAAADAAIAAAAaAA8AAAADAAIAAAAaABAAAAADAAIAAAAaABEAAAAIAAIAAAAaABIAAAADAAIAAAAaABMAAAADAAIAAAAbABMAAAADAAIAAAAbABIAAAADAAIAAAAbABEAAAAIAAIAAAAbABAAAAADAAIAAAAbAA8AAAADAAIAAAAbAA4AAAADAAIAAAAbAA0AAAADAAIAAAAbAAwAAAADAAIAAAAbAAsAAAADAAIAAAAbAAoAAAADAAIAAAAbAAkAAAADAAIAAAAbAAgAAAADAAIAAAAbAAcAAAAIAAIAAAAbAAYAAAADAAIAAAAbAAUAAAADAAIAAAAbAAQAAAADAAIAAAAbAAMAAAADAAIAAAAbAAIAAAADAAIAAAAbAAEAAAADAAIAAAAcAAEAAAADAAIAAAAcAAIAAAADAAIAAAAcAAMAAAADAAIAAAAcAAQAAAADAAIAAAAcAAUAAAADAAIAAAAcAAYAAAADAAIAAAAcAAcAAAAIAAIAAAAcAAgAAAADAAIAAAAcAAkAAAADAAIAAAAcAAoAAAADAAIAAAAcAAsAAAADAAIAAAAcAAwAAAADAAIAAAAcAA0AAAADAAIAAAAcAA4AAAADAAIAAAAcAA8AAAADAAIAAAAcABAAAAADAAIAAAAcABEAAAAIAAIAAAAcABIAAAADAAIAAAAcABMAAAADAAIAAAAdABMAAAADAAIAAAAdABIAAAADAAIAAAAdABEAAAAIAAIAAAAdABAAAAADAAIAAAAdAA8AAAADAAIAAAAdAA4AAAADAAIAAAAdAA0AAAADAAIAAAAdAAwAAAADAAIAAAAdAAsAAAADAAIAAAAdAAoAAAADAAIAAAAdAAkAAAADAAIAAAAdAAgAAAADAAIAAAAdAAcAAAAIAAIAAAAdAAYAAAADAAIAAAAdAAUAAAADAAIAAAAdAAQAAAADAAIAAAAdAAMAAAADAAIAAAAdAAIAAAADAAIAAAAdAAEAAAADAAIAAAAeAAEAAAADAAIAAAAeAAIAAAADAAIAAAAeAAMAAAADAAIAAAAeAAQAAAADAAIAAAAeAAUAAAADAAIAAAAeAAYAAAADAAIAAAAeAAcAAAADAAIAAAAeAAgAAAAIAAIAAAAeAAkAAAAIAAIAAAAeAAoAAAADAAIAAAAeAAsAAAADAAIAAAAeAAwAAAADAAIAAAAeAA0AAAADAAIAAAAeAA4AAAADAAIAAAAeAA8AAAADAAIAAAAeABAAAAAIAAIAAAAeABEAAAAIAAIAAAAeABIAAAADAAIAAAAeABMAAAADAAIAAAAfABMAAAADAAIAAAAfABIAAAADAAIAAAAfABEAAAADAAIAAAAfABAAAAAIAAIAAAAfAA8AAAADAAIAAAAfAA4AAAAIAAIAAAAfAA0AAAAIAAIAAAAfAAwAAAAIAAIAAAAfAAsAAAAIAAIAAAAfAAoAAAAIAAIAAAAfAAkAAAAIAAIAAAAfAAgAAAAIAAIAAAAfAAcAAAADAAIAAAAfAAYAAAADAAIAAAAfAAUAAAADAAIAAAAfAAQAAAADAAIAAAAfAAMAAAADAAIAAAAfAAIAAAADAAIAAAAfAAEAAAADAAIAAAAgAAEAAAADAAIAAAAgAAIAAAADAAIAAAAgAAMAAAADAAIAAAAgAAQAAAADAAIAAAAgAAUAAAADAAIAAAAgAAYAAAADAAIAAAAgAAcAAAADAAIAAAAgAAgAAAAIAAIAAAAgAAkAAAAIAAIAAAAgAAoAAAAIAAIAAAAgAAsAAAAIAAIAAAAgAAwAAAAIAAIAAAAgAA0AAAAIAAIAAAAgAA4AAAADAAIAAAAgAA8AAAADAAIAAAAgABAAAAAIAAIAAAAgABEAAAADAAIAAAAgABIAAAADAAIAAAAgABMAAAADAAIAAAAhABMAAAADAAIAAAAhABIAAAADAAIAAAAhABEAAAADAAIAAAAhABAAAAAIAAIAAAAhAA8AAAADAAIAAAAhAA4AAAADAAIAAAAhAA0AAAADAAIAAAAhAAwAAAADAAIAAAAhAAsAAAADAAIAAAAhAAoAAAAIAAIAAAAhAAkAAAAIAAIAAAAhAAgAAAAIAAIAAAAhAAcAAAADAAIAAAAhAAYAAAADAAIAAAAhAAUAAAADAAIAAAAhAAQAAAADAAIAAAAhAAMAAAADAAIAAAAhAAIAAAADAAIAAAAhAAEAAAADAAIAAAAiAAEAAAADAAIAAAAiAAIAAAADAAIAAAAiAAMAAAADAAIAAAAiAAQAAAADAAIAAAAiAAUAAAADAAIAAAAiAAYAAAADAAIAAAAiAAcAAAADAAIAAAAiAAgAAAADAAIAAAAiAAkAAAADAAIAAAAiAAoAAAADAAIAAAAiAAsAAAADAAIAAAAiABAAAAAIAAIAAAAiABEAAAAIAAIAAAAiABIAAAADAAIAAAAiABMAAAADAAIAAAAAAA0AAAADAAIAAAAXAAcAAAAMAAUAAAAXAAgAAAAMAAUAAAAXAAkAAAAMAAUAAAAXAAoAAAAMAAUAAAAjAAcAAAADAAIAAAA=")
tile_set = SubResource("TileSet_obd1h")

[node name="Plants8" type="TileMapLayer" parent="TileMap"]
light_mask = 4
use_parent_material = true
tile_map_data = PackedByteArray("AAAQAA0AAAAOAAQAAAATABAAAAAOAAQAAAAQABMAAAAOAAUAAAATAA0AAAALAAUAAAARAA8AAAALAAUAAAASABEAAAALAAUAAAASABIAAAALAAUAAAANAA0AAAALAAIAAAAEAAYAAAALAAIAAAAQAAIAAAALAAIAAAARAAEAAAALAAIAAAAaAAIAAAAcAAYAAAAaAAMAAAAcAAcAAAAbAAIAAAAdAAYAAAAbAAMAAAAdAAcAAAAHAAEAAAAcAAYAAAAHAAIAAAAcAAcAAAAIAAEAAAAdAAYAAAAIAAIAAAAdAAcAAAACABAAAAAcAAYAAAACABEAAAAcAAcAAAADABAAAAAdAAYAAAADABEAAAAdAAcAAAAbAA8AAAAcAAYAAAAbABAAAAAcAAcAAAAcAA8AAAAdAAYAAAAcABAAAAAdAAcAAAABAAAAAAAaAAMAAAABAAEAAAAaAAQAAAABAAIAAAAaAAUAAAACAAAAAAAbAAMAAAACAAEAAAAbAAQAAAACAAIAAAAbAAUAAAADAAAAAAAcAAMAAAADAAEAAAAcAAQAAAADAAIAAAAcAAUAAAADAAMAAAAcAAYAAAADAAQAAAAcAAcAAAAEAAMAAAAdAAYAAAAEAAQAAAAdAAcAAAAdAAIAAAAaAAAAAAAdAAMAAAAaAAEAAAAdAAQAAAAaAAIAAAAeAAIAAAAbAAAAAAAeAAMAAAAbAAEAAAAeAAQAAAAbAAIAAAAfAAIAAAAcAAAAAAAfAAMAAAAcAAEAAAAfAAQAAAAcAAIAAAALAAYAAAAaAAAAAAALAAcAAAAaAAEAAAALAAgAAAAaAAIAAAAMAAYAAAAbAAAAAAAMAAcAAAAbAAEAAAAMAAgAAAAbAAIAAAANAAYAAAAcAAAAAAANAAcAAAAcAAEAAAANAAgAAAAcAAIAAAAGABAAAAAaAAAAAAAGABEAAAAaAAEAAAAGABIAAAAaAAIAAAAHABAAAAAbAAAAAAAHABEAAAAbAAEAAAAHABIAAAAbAAIAAAAIABAAAAAcAAAAAAAIABEAAAAcAAEAAAAIABIAAAAcAAIAAAAcAAkAAAAIAAIAAAAbAAgAAAAIAAIAAAAcAAoAAAAIAAIAAAAgAA4AAAAIAAIAAAAhABAAAAAIAAIAAAAhAA8AAAAIAAIAAAAhAA0AAAAIAAIAAAAhAAwAAAAIAAIAAAAcABIAAAAIAAIAAAAbABIAAAAIAAIAAAAcABMAAAAIAAIAAAABAA0AAAAIAAIAAAACAA0AAAAIAAIAAAACAA4AAAAIAAIAAAAVAAYAAAAOAAUAAAATAAEAAAAOAAUAAAAAAAsAAAAOAAUAAAACAAcAAAAOAAQAAAAGAAkAAAAOAAQAAAAjAAwAAAANAAUAAAAjAAcAAAANAAUAAAAiAAsAAAAOAAUAAAAiAAgAAAAOAAUAAAA=")
tile_set = SubResource("TileSet_uully")

[node name="FromR6" type="Marker2D" parent="."]
position = Vector2(67, 319)

[node name="FromR9" type="Marker2D" parent="."]
position = Vector2(681, 50)

[node name="FromR10" type="Marker2D" parent="."]
position = Vector2(1076, 325)

[node name="ToRoom6" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ToRoom6"]
position = Vector2(-9.75, 320)
shape = SubResource("RectangleShape2D_d6dk7")

[node name="ToRoom9" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ToRoom9"]
position = Vector2(672, -10)
shape = SubResource("RectangleShape2D_p6rjs")

[node name="ToRoom10" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ToRoom10"]
position = Vector2(1162, 324)
shape = SubResource("RectangleShape2D_2o70h")

[node name="Walls" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Walls"]
polygon = PackedVector2Array(0, 240, 0, 0, 592, 0, 592, -65, 751, -65, 752, 0, 1152, 0, 1152, 262, 1215, 262, 1216, 388, 1152, 387, 1152, 648, 0, 648, 0, 400, -32, 400, -32, 240, 0, 240, -45, 234, -44, 665, 1269, 672, 1230, -45, -28, -137)

[connection signal="area_entered" from="ToRoom6" to="." method="_on_to_room_6_area_entered"]
[connection signal="area_entered" from="ToRoom9" to="." method="_on_to_room_9_area_entered"]
[connection signal="area_entered" from="ToRoom10" to="." method="_on_to_room_10_area_entered"]
